[tool.poetry]
name = "instattack"
version = "0.1.0"
description = ""
authors = ["nickmflorin <nickmflorin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.2"
plumbum = "^1.6"
aiohttp = "^3.5"
asyncio = "^3.4"
tortoise-orm = "^0.11.12"
requests = "^2.22"
dacite = "^1.0"
aiologger = "^0.3.0"
aiofiles = "^0.4.0"
cerberus = "^1.3"
bs4 = "^0.0.1"
aiojobs = "^0.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
manage = "instattack.__main__:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

