[tool.poetry]
name = "instattack"
version = "0.1.0"
description = ""
authors = ["Nick Florin <nickmflorin@gmail.com>"]

[tool.poetry.dependencies]
pkconfig = {path = "./pkconfig/"}
python = "^3.7"
aenum = "=2.1.2"
aiodns = "=2.0.0"
aiofiles = "=0.4.0"
aiohttp = "=3.5.4"
aiojobs = "=0.2.2"
aiosqlite = "=0.10.0"
appnope = "=0.1.0"
async-timeout = "=3.0.1"
attrs = "=19.1.0"
backcall = "=0.1.0"
beautifulsoup4 = "=4.7.1"
blinker = "=1.4"
cement = "=3.0.4"
Cerberus = "=1.3.1"
certifi = "=2019.6.16"
cffi = "=1.12.3"
chardet = "=3.0.4"
ciso8601 = "=2.1.1"
dacite = "=1.0.2"
decorator = "=4.4.0"
idna = "=2.8"
ipdb = "=0.12"
ipython = "=7.5.0"
ipython-genutils = "=0.2.0"
jedi = "=0.14.0"
maxminddb = "=1.4.1"
multidict = "=4.5.2"
parso = "=0.5.0"
pexpect = "=4.7.0"
pickleshare = "=0.7.5"
plumbum = "=1.6.7"
prompt-toolkit = "=2.0.9"
proxybroker = "=0.3.2"
ptyprocess = "=0.6.0"
pycares = "=3.0.0"
pycparser = "=2.19"
Pygments = "=2.4.2"
PyPika = "=0.28.0"
requests = "=2.22.0"
simple-settings = "=0.16.0"
six = "=1.12.0"
soupsieve = "=1.9.2"
tortoise-orm = "=0.12.2"
traitlets = "=4.3.2"
urllib3 = "=1.25.3"
wcwidth = "=0.1.7"
yarl = "=1.3.0"
termx = {path = "../termx"}

[tool.poetry.dev-dependencies]
termx = {path = "./termx/"}

[tool.poetry.scripts]
clean = "instattack.main:clean"
cleanroot = "instattack.main:cleanroot"
instattack = "instattack.main:instattack"
playground = "instattack.main:run_playground"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

